--- a/views/admin/food/index.ejs
+++ b/views/admin/food/index.ejs
@@ -26,6 +26,9 @@
                       <h6 class="fw-semibold mb-0">Type</h6>
                     </th>
                     <th class="border-bottom-0">
+                      <h6 class="fw-semibold mb-0">Food Limit</h6>
+                    </th>
+                    <th class="border-bottom-0">
                       <h6 class="fw-semibold mb-0">Orginal Price</h6>
                     </th>
                     <th class="border-bottom-0">
@@ -70,6 +73,9 @@
                       </td>
                       <td class="border-bottom-0">
                         <h6 class="fw-semibold mb-1"><%= (item.type === 1) ? "Veg" : "Non Veg" %></h6>
+                      </td>
+                      <td class="border-bottom-0">
+                        <h6 class="fw-semibold mb-1"><%= item.foodLimit %></h6>
                       </td>
                       <td class="border-bottom-0">
                         <h6 class="fw-semibold mb-1"><%= item.orgPrice %></h6>
@@ -163,6 +169,9 @@
                     </th>
                     <th class="border-bottom-0">
                       <h6 class="fw-semibold mb-0">Type</h6>
+                    </th>
+                    <th class="border-bottom-0">
+                      <h6 class="fw-semibold mb-0">Food Limit</h6>
                     </th>
                     <th class="border-bottom-0">
                       <h6 class="fw-semibold mb-0">Orginal Price</h6>
