--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -100,7 +100,7 @@
 								if (locals.food) { 
 									food.forEach((item)=>{
 							%>
-								<div class="col-lg-4 border-start custom-border bg-light">
+								<div class="col-lg-3 border-start custom-border bg-light pt-4">
 									<div class="post-entry-1">
 										<a href="/foodDetail/<%= item.slug %>">
 											<% if(item.image){ %>
