--- a/views/admin/category/index.ejs
+++ b/views/admin/category/index.ejs
@@ -8,7 +8,7 @@
             </div>
             <script>
               setTimeout(()=>{
-                window.location.href = "http://127.0.0.1:3000/admin/category"; 
+                window.location.href = "/admin/category"; 
               },800)
             </script>
         <% } if(locals.status === "error"){ %>
@@ -17,7 +17,7 @@
             </div>
             <script>
               setTimeout(()=>{
-                window.location.href = "http://127.0.0.1:3000/admin/category"; 
+                window.location.href = "/admin/category"; 
               },800)
             </script>
         <% } %>
@@ -26,7 +26,7 @@
         <div class="card w-100">
           <div class="card-body p-0">
             <div class="table-responsive">
-              <table class="table table-striped text-nowrap mb-0 align-middle">
+              <table class="table text-center table-striped text-nowrap mb-0 align-middle">
                 <thead class="text-dark fs-4">
                   <tr>
                     <th class="border-bottom-0">
@@ -55,8 +55,19 @@
                       <td class="border-bottom-0">
                         <h6 class="fw-semibold mb-1"><%= item.categoryName %></h6>
                       </td>
+                      
                       <td class="border-bottom-0">
-                        <h6 class="fw-semibold mb-1"><%= item.status %></h6>
+                        <h6 class="fw-semibold mb-1">
+                          <% if (!item.status) { %>
+                            <a href="/admin/categoryStatus/<%= item._id %>-true">
+                              <button type="button" class="btn btn-danger w-50">Deactive</button>
+                            </a>
+                          <% } else { %> 
+                            <a href="/admin/categoryStatus/<%= item._id %>-false">
+                              <button type="button" class="btn btn-success w-50">Active</button>
+                            </a>
+                          <% } %>
+                        </h6>
                       </td>
                       <td class="border-bottom-0">
                           <a href="/admin/editCategory?id=<%= item._id %>"><button type="button" class="btn btn-primary w-50">Edit</button></a>
