--- a/views/public/currentOrders.ejs
+++ b/views/public/currentOrders.ejs
@@ -10,29 +10,45 @@
                         <div class="card-body">
                             <div class="row py-3">
                                 <div class="col-sm-12">
-                                    <h3 class="mb-0">current Orders</h3>
-                                </div>
-                            </div>
-                            <div class="row py-3 text-light">
-                                <div class="py-3 col-sm-12">
-                                    <div class="bg-success rounded">
-                                        <p class="mb-0 p-3">dummy address</p>
-                                    </div>
-                                </div>
-                                <div class="py-3 col-sm-12">
-                                    <div class="bg-warning rounded">
-                                        <p class="mb-0 p-3">dummy address</p>
-                                    </div>
-                                </div>
-                            </div>
-                            
-                            <div class="row py-1">
-                                <div class="col-sm-12">
+                                    <h3 class="mb-3 float-start">Current Orders</h3>
                                     <a href="/order-history">
-                                        <button type="button" class="btn btn-outline-primary float-end">order History</button>
-                                    </a>    
+                                        <button type="button" class="btn btn-outline-secondary float-end mb-3">Order History</button>
+                                    </a>
+                                    <a href="/canceled-orders">
+                                        <button type="button" class="btn btn-outline-danger float-end mb-3 mx-1">Canceled Orders</button>
+                                    </a>
+                                    <div class="float-end mx-4 pt-2">
+                                        <div class="rounded-circle mx-1 float-start" style="width: 20px; height: 20px; background-color: #d3ea66;"> </div>
+                                        <h6 class="fw-semibold mb-0 float-start mx-1">Pending Orders</h6>
+                                    </div>
+                                    
+                                </div>
+                                <hr>
+                            </div>
+                            <%  
+                                let i = 1;
+                                data.forEach((item)=>{
+                            %>
+                            <div class="row py-1">
+                                <div class="py-3 col-sm-12">
+                                    <div class="rounded p-2" style="background-color: #d3ea66;">
+                                        <p class="mb-0 px-3">Order Id : <%= item._id %></p>
+                                        <p class="mb-0 px-3">Payment Method : <%= item.paymentMethod %></p>
+                                        <p class="mb-0 px-3">Payment Status : <%= item.paymentStatus %></p>
+                                        <p class="mb-0 px-3">status : <%= item.status %></p>
+                                        <p class="mb-0 px-3">Address : <%= item.address %></p>
+                                        <p class="mb-0 px-3">Date : <%= item.time.toLocaleString("en-US", {day: "numeric", month: "short", year: "numeric"}) %></p>
+                                        <p class="mb-0 px-3">Time : <%= item.time.toLocaleString("en-US", {hour: "numeric", minute: "numeric", second: "numeric", hour12: true}); %> </p>
+                                        <hr>
+                                        <% item.items.forEach((element)=>{ %>
+                                            <span class="mb-0 px-3"><b>Dish :</b> <%= element.carted.foodName %></span><span class="mb-0 px-3"><b>Qty :</b> <%= element.quantity %></span><span class="mb-0 p-3"><b>Price :</b> <%= element.total %></span>
+                                            <hr>
+                                        <% }) %>
+                                        <h4 class="mb-0 px-3">Total : <span class="text-danger">₹ <%= item.subTotal %></span></h4>
+                                    </div>
                                 </div>
                             </div>
+                            <% }) %> 
                         </div>
                     </div>
                 </div>
@@ -40,5 +56,5 @@
         </div>
     </section>
 
-<!-- include footer -->
+
 <%- include('./includes/footer') %>
