--- a/views/public/forgotPassword.ejs
+++ b/views/public/forgotPassword.ejs
@@ -18,7 +18,7 @@
 			  <form method="post" id="forgotPasswordForm">
 				<div class="mb-3">
 					<label for="forgotemail" id="forgotemailLabel" class="form-label">Email</label>
-					<input type="email" class="form-control" id="forgotEmail" name="forgotEmail" placeholder="Email" required>				
+					<input type="email" class="form-control" id="forgotEmail" name="forgotEmail" placeholder="Email">				
 				</div>
 				<button class="btn btn-warning w-100 py-8 fs-4 mb-4 rounded-2" id="forgotBtn">Send</button>
 			  </form>
@@ -33,10 +33,17 @@
 <script>
 	document.getElementById('forgotPasswordForm').addEventListener('submit', async (event) => {
 		event.preventDefault();
-        const btn = document.getElementById("forgotBtn")
-		btn.innerHTML = "processing.."
+        
 		const formData = new FormData(event.target);
 		const forgotEmail = formData.get('forgotEmail');
+		if(forgotEmail === ""){
+			const forgotLabel = document.getElementById('forgotemailLabel')
+			forgotLabel.innerHTML = "Email required";
+			forgotLabel.style.color = "red";
+			return 
+		}
+		const btn = document.getElementById("forgotBtn")
+		btn.innerHTML = "processing.."
 		try {
 			const response = await fetch('/forgot-password', {
 			method: 'POST',
@@ -51,24 +58,36 @@
 			const alertDiv = document.getElementById('alertResult');
 			
 			if (data.status === 'success') { 
-				alertDiv.classList.remove('alert-danger');
-				alertDiv.classList.add('alert-success');
-				alertDiv.classList.remove('d-none');
-				alertDiv.innerText = data.msg;
+				Toastify({
+					text: data.msg,
+					className: "info",
+					style: {
+						background: "linear-gradient(to right, #0b7303, #24c9a3)",
+					}
+				}).showToast();
 				btn.disabled = true
 				btn.innerHTML = "send"
 				
 			} else {
-				alertDiv.classList.remove('alert-success');
-				alertDiv.classList.add('alert-danger');
-				alertDiv.classList.remove('d-none');
-				alertDiv.innerText = data.msg;
+				Toastify({
+					text: data.msg,
+					className: "info",
+					style: {
+						background: "linear-gradient(to right, #ff0000, #dd2a7f)",
+					}
+					}).showToast();
+				setTimeout(()=>{
+					btn.innerHTML = "send"
+				},500)
 			}
 		}catch (error) {
-			const alertDiv = document.getElementById('alertResult')
-			alertDiv.classList.add("alert-danger")
-			alertDiv.classList.remove("d-none")
-			alertDiv.innerText = 'An error occurred. Please try again later.';
+			Toastify({
+            text: "An error occurred. Please try again later.",
+            className: "info",
+            style: {
+                background: "linear-gradient(to right, #ff0000, #dd2a7f)",
+            }
+            }).showToast();
 		}
 	});
 
