--- a/views/public/addressBook.ejs
+++ b/views/public/addressBook.ejs
@@ -22,7 +22,7 @@
                                  <p>No address to display</p>
                                 <% }else{ %>
                                     <% address.addresses.forEach(element => { %>
-                                        <div class="rounded p-3 mb-3" style="background-color: #e4e4da;">
+                                        <div class="rounded p-3 mb-3 bg-<%= address.defaultAddress.equals(element._id) ? 'secondary text-light' : 'light' %>">
                                             <div class="d-flex justify-content-between align-items-center">
                                                 <div>
                                                     <p class="mb-0"><strong><%= element.fullName %></strong></p>
@@ -31,7 +31,7 @@
                                                     <p class="mb-0">Address Type: <%= element.addressType %></p>
                                                 </div>
                                                 <div>
-                                                    <button class="btn btn-primary" onclick="setDefault('<%= element._id %>')">Set Default</button>
+                                                    <button class="btn btn-<%= address.defaultAddress.equals(element._id) ? 'info text-light' : 'primary' %>" onclick="setDefault('<%= element._id %>')"><%= address.defaultAddress.equals(element._id) ? 'Default' : 'Set Default' %></button>
                                                     <a href="/edit-address/<%= element._id %>"><button class="btn btn-primary">Edit</button></a>
                                                     <button data-address="<%= JSON.stringify(element) %>" class="btn btn-danger delete-address">Delete</button>
                                                 </div>
