--- a/views/public/includes/header.ejs
+++ b/views/public/includes/header.ejs
@@ -62,7 +62,7 @@
                 <button class="dropdown-toggle border-0 mx-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <div class="d-flex align-items-center author mx-3">
                     <i class="bi bi-list mobile-nav-toggle"></i>
-                    <div class="photo"><img src="assets/img/person-1.jpg" alt="profile-img" class="img-fluid"></div>
+                    <div class="photo"><img src="../assets/img/person-1.jpg" alt="profile-img" class="img-fluid"></div>
                     <div class="name">
                       <a href="#" class="m-0 p-0"><%= userName ? userName : "user" %></a>
                     </div>
