--- a/views/admin/food/index.ejs
+++ b/views/admin/food/index.ejs
@@ -84,7 +84,7 @@
                         <h6 class="fw-semibold mb-1"><%= item.discPrice %></h6>
                       </td>
                       <td class="border-bottom-0">
-                        <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#foodModal<%= i %>">
+                        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#foodModal<%= i %>">
                           <h6 class="fw-semibold mb-1">Description</h6>
                         </button>
                       </td>
