--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -110,7 +110,7 @@
 											<% } %>
 										</a>
 										<small class="text-secondary"><%= item.type === 1 ? "Veg" : "Non-Veg" %> &nbsp;<i class="bi bi-circle-fill text-<%= item.type === 1 ? "success" : "danger" %>"></i></small>
-										<h2><a href="/foodDetail/<%= item.slug %>"><%= item.foodName %></a></h2>
+										<h2 style="height: 50px; padding-top: 10px;"><a href="/foodDetail/<%= item.slug %>"><%= item.foodName %></a></h2>
 										<a href="/foodDetail/<%= item.slug %>"><button type="button" class="btn btn-danger float-end">Show Details</button></a>
 										<h2 class="pt-2"><a href="/foodDetail/" class="text-success"><b>₹ <%= item.discPrice %></b></a>&nbsp;&nbsp;<small class="text-secondary"><del>₹ <%= item.orgPrice %></del></small></h2>
 									</div>
