--- a/views/public/orderHistory.ejs
+++ b/views/public/orderHistory.ejs
@@ -19,7 +19,7 @@
                                     </a> 
                                     <div class="float-end mx-4 pt-2">
                                         <div class="rounded-circle bg-secondary mx-3 float-start" style="width: 20px; height: 20px;"></div>
-                                        <h6 class="fw-semibold mb-0 float-start mx-1">Previos Orders</h6>
+                                        <h6 class="fw-semibold mb-0 float-start mx-1">Past Orders</h6>
                                     </div>
                                 </div>
                                 <hr>
