--- a/views/admin/orders/index.ejs
+++ b/views/admin/orders/index.ejs
@@ -2,13 +2,17 @@
   <div class="container-fluid">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title fw-semibold mb-4">orders</h5>
+        <h5 class="card-title fw-semibold mb-4 float-start">orders</h5>
+        <div class="float-end mx-4 pt-2 float-end">
+          <div class="rounded-circle bg-danger mx-2 float-start" style="width: 18px; height: 18px;"></div>
+          <h6 class="fw-semibold mb-0 float-start">Canceled Orders</h6>
+      </div>
         <div class="card w-100">
           <div class="card-body p-0">
             <div class="table-responsive">
               <% if(locals.data.length > 0){ %>
 
-              <table class="table table-striped text-nowrap mb-0 align-middle">
+              <table class="table text-nowrap mb-0 align-middle">
                 <thead class="text-dark fs-4 text-center">
                   <tr>
                     <th class="border-bottom-0">
@@ -49,7 +53,7 @@
                     let i = 1;
                     data.forEach((item)=>{
                   %>
-                  <tr>
+                  <tr class="bg-<%= item.status === 'canceled' ? 'danger' : 'light' %>">
                     <th class="border-bottom-0">
                       <h6 class="fw-semibold mb-0"><%= i %></h6>
                     </th>
@@ -76,18 +80,18 @@
                     </th>
                     <th class="border-bottom-0">
                         <% if(item.status !== 'delivered'){ %>
-                          <div class="rounded-circle bg-warning float-start mx-1" style="width: 20px; height: 20px;"></div>
-                          <h6 class="fw-semibold mb-0 float-start mx-1"><%= 'Pending' %></h6>
+                          <div class="rounded-circle bg-warning float-start mx-1 payment-status-color" style="width: 20px; height: 20px;"></div>
+                          <h6 class="fw-semibold mb-0 float-start mx-1 payment-status-text"><%= 'Pending' %></h6>
                         <% }else{ %>
-                          <div class="rounded-circle bg-success float-start mx-1" style="width: 20px; height: 20px;"></div>
-                          <h6 class="fw-semibold mb-0 float-start mx-1"><%= 'Received' %></h6>
+                          <div class="rounded-circle bg-success float-start mx-1 payment-status-color" style="width: 20px; height: 20px;"></div>
+                          <h6 class="fw-semibold mb-0 float-start mx-1 payment-status-text"><%= 'Received' %></h6>
                         <% } %>
                     </th>
                     <th class="border-bottom-0">
                       <h6 class="fw-semibold mb-0"><%= item.paymentMethod %></h6>
                     </th>
                     <th class="border-bottom-0">
-                      <select class="form-select border-dark" aria-label="Default select example" onchange="changeStatus(this, '<%= item._id %>')" <%= (item.status === "canceled" || item.status === "delivered") ? 'disabled' : "" %>>
+                      <select class="form-select border-dark status-manager" aria-label="Default select example" onchange="changeStatus(this, '<%= item._id %>')" <%= (item.status === "canceled" || item.status === "delivered") ? 'disabled' : "" %>>
                         <option value="placed" <%= (item.status === 'placed') ? "selected" : "" %> >Placed</option>
                         <option value="confirmed" <%= (item.status === 'confirmed') ? "selected" : "" %> >confirmed</option>
                         <option value="prepared" <%= (item.status === 'prepared') ? "selected" : "" %> >prepared</option>
@@ -96,9 +100,9 @@
                     </th>
                     <td class="border-bottom-0">
                       <% if(item.status === "canceled" || item.status === "delivered" || item.status === "prepared"){ %>
-                        <button type="button" class="btn btn-danger w-100" disabled>Cancel Order</button>
+                        <button type="button" class="btn btn-danger w-100 cancel-button" disabled>Cancel Order</button>
                       <% }else{ %>
-                        <button type="button" class="btn btn-danger w-100" onclick="cancelOrder('<%= item._id %>')">Cancel Order</button>
+                        <button type="button" class="btn btn-danger w-100 cancel-button" onclick="cancelOrder('<%= item._id %>')">Cancel Order</button>
                       <% } %>
                     </td>
                   </tr>
@@ -210,53 +214,68 @@
 
 <script>
   async function cancelOrder(orderId) {
-    
-    const data = { id:  orderId};
+    Swal.fire({
+    title: 'Are you sure?',
+    text: "You won't be able to revert this!",
+    icon: 'warning',
+    showCancelButton: true,
+    confirmButtonColor: '#3085d6',
+    cancelButtonColor: '#d33',
+    confirmButtonText: 'Yes, cancel it!'
+  }).then(async (result) => {
+    if (result.isConfirmed) {
+      const data = { id:  orderId};
+      try {
+        const response = await fetch("/admin/cancel-order", {
+          method: "PATCH",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(data),
+        });
 
-    try {
-      const response = await fetch("/admin/cancel-order", {
-        method: "PATCH",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify(data),
-      });
-
-      const result = await response.json()
-      if(result.status === "success"){
-        Swal.fire(
-          result.status,
-          result.msg,
-          'success'
-        )
-        setTimeout(() => {
-            window.location = "http://127.0.0.1:3000/admin/orders"
-        }, 1000);
-      }else{
-        Toastify({
-          text: result.msg,
-          className: "info",
-          style: {
-              background: "linear-gradient(to right, #ff0000, #dd2a7f)",
-          }
-        }).showToast();
+        const result = await response.json()
+        if(result.status === "success"){
+          Swal.fire(
+            'Canceled!',
+            'Your order has been Canceled.',
+            'success'
+          )
+          setTimeout(() => {
+              window.location = "http://127.0.0.1:3000/admin/orders"
+          }, 1000);
+        }else{
+          Toastify({
+            text: result.msg,
+            className: "info",
+            style: {
+                background: "linear-gradient(to right, #ff0000, #dd2a7f)",
+            }
+          }).showToast();
+        }
+        
+      } catch (error) {
+          Toastify({
+            text: error.message,
+            className: "info",
+            style: {
+                background: "linear-gradient(to right, #ff0000, #dd2a7f)",
+            }
+          }).showToast();
       }
-      
-    } catch (error) {
-        Toastify({
-          text: error.message,
-          className: "info",
-          style: {
-              background: "linear-gradient(to right, #ff0000, #dd2a7f)",
-          }
-        }).showToast();
     }
+  })
+    
 
 }
 
 async function changeStatus(status, orderId) {
   
     const data = { status:  status.value, id : orderId};
+    const paymentStatusTextChange = status.parentElement.parentElement.querySelector('.payment-status-text')
+    const paymentStatusColorChange = status.parentElement.parentElement.querySelector('.payment-status-color')
+    const cancelButton = status.parentElement.parentElement.querySelector('.cancel-button')
+    const dropdown = status.parentElement.querySelector('.status-manager')
 
     try {
       const response = await fetch("/admin/change-status", {
@@ -269,12 +288,27 @@ async function changeStatus(status, orderId) {
 
       const result = await response.json()
       if(result.status === "success"){
-        Swal.fire(
-          result.status,
-          result.msg,
-          'success'
-        )
-        console.log(result.value)
+        Toastify({
+            text: result.msg,
+            className: "info",
+            style: {
+                background: "linear-gradient(to right, #0b7303, #24c9a3)",
+            }
+            }).showToast();
+          if(result.value === "prepared"){
+            status.querySelector(`[value="placed"]`).disabled = true;
+            status.querySelector(`[value="confirmed"]`).disabled = true;
+          }
+          if(result.value === "delivered" || result.value === "prepared"){
+            cancelButton.disabled = true
+          }
+          if(result.value === "delivered"){
+            paymentStatusColorChange.classList.remove('bg-warning');
+            paymentStatusColorChange.classList.add('bg-success');;
+            paymentStatusTextChange.innerHTML = 'Received';
+            cancelButton.disabled = true
+            dropdown.disabled = true;
+          }
         setTimeout(() => {
           status.querySelector(`[value="${result.value}"]`).selected = true;
         }, 1000);
