--- a/views/public/currentOrders.ejs
+++ b/views/public/currentOrders.ejs
@@ -32,6 +32,7 @@
                             <div class="row py-1">
                                 <div class="py-3 col-sm-12">
                                     <div class="rounded p-2" style="background-color: #d3ea66;">
+                                        <button type="button" class="btn btn-danger float-end" onclick="cancelOrder('<%= item._id %>')">Cancel Order</button>
                                         <p class="mb-0 px-3">Order Id : <%= item._id %></p>
                                         <p class="mb-0 px-3">Payment Method : <%= item.paymentMethod %></p>
                                         <p class="mb-0 px-3">Payment Status : <%= item.paymentStatus %></p>
@@ -55,6 +56,56 @@
             </div>
         </div>
     </section>
+
+    <script>
+  async function cancelOrder(orderId) {
+    
+    const data = { id:  orderId};
+
+    try {
+      const response = await fetch("/cancel-order", {
+        method: "DELETE",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify(data),
+      });
+
+      const result = await response.json()
+      if(result.status === "success"){
+        Toastify({
+            text: result.msg,
+            className: "info",
+            style: {
+                background: "linear-gradient(to right, #0b7303, #24c9a3)",
+            }
+            }).showToast();
+        setTimeout(() => {
+            location.reload()
+        }, 800);
+      }else{
+        Toastify({
+          text: result.msg,
+          className: "info",
+          style: {
+              background: "linear-gradient(to right, #ff0000, #dd2a7f)",
+          }
+        }).showToast();
+      }
+      
+    } catch (error) {
+        Toastify({
+          text: error.message,
+          className: "info",
+          style: {
+              background: "linear-gradient(to right, #ff0000, #dd2a7f)",
+          }
+        }).showToast();
+    }
+
+}
+
+</script>
 
 
 <%- include('./includes/footer') %>
