review over bug fix are needed

--- a/views/public/forgotPassword.ejs
+++ b/views/public/forgotPassword.ejs
@@ -21,6 +21,7 @@
 					<input type="email" class="form-control" id="forgotEmail" name="forgotEmail" placeholder="Email">				
 				</div>
 				<button class="btn btn-warning w-100 py-8 fs-4 mb-4 rounded-2" id="forgotBtn">Send</button>
+				<p class="text-center login-button"><a class="text-primary fw-bold ms-2" href="/login">Go to login</a></p>
 			  </form>
 			</div>
 		  </div>
