--- a/views/public/includes/header.ejs
+++ b/views/public/includes/header.ejs
@@ -74,8 +74,7 @@
                   <li><a class="dropdown-item" href="/orders">Orders</a></li>
                   <li><a class="dropdown-item" href="/track-order">Track Order</a></li>
                   <hr>
-                  <!-- <li><a class="dropdown-item" href="/logout">logout</a></li> -->
-                  <li><a class="dropdown-item" href="#">logout</a></li>
+                  <li><a class="dropdown-item" href="/logout">logout</a></li>
                 </ul>
               </div>
               <!-- <a href="" class="mx-3"><span class="bi bi-power"></span> </a> -->
