--- a/views/public/currentOrders.ejs
+++ b/views/public/currentOrders.ejs
@@ -14,6 +14,7 @@
                                     <a href="/order-history">
                                         <button type="button" class="btn btn-outline-secondary float-end mb-3">Order History</button>
                                     </a>
+                                    
                                     <a href="/canceled-orders">
                                         <button type="button" class="btn btn-outline-danger float-end mb-3 mx-1">Canceled Orders</button>
                                     </a>
@@ -32,7 +33,11 @@
                             <div class="row py-1">
                                 <div class="py-3 col-sm-12">
                                     <div class="rounded p-2" style="background-color: #d3ea66;">
+                                        <% if (item.status === 'prepared' || item.status === 'delivered') { %>
+                                            <button type="button" class="btn btn-danger float-end" disabled>Cancel Order</button>
+                                        <% }else{ %>
                                         <button type="button" class="btn btn-danger float-end" onclick="cancelOrder('<%= item._id %>')">Cancel Order</button>
+                                        <% } %>
                                         <p class="mb-0 px-3">Order Id : <%= item._id %></p>
                                         <p class="mb-0 px-3">Payment Method : <%= item.paymentMethod %></p>
                                         <p class="mb-0 px-3">Payment Status : <%= item.paymentStatus %></p>
