--- a/views/public/includes/profileLeft.ejs
+++ b/views/public/includes/profileLeft.ejs
@@ -33,8 +33,7 @@
                         <p class="mb-0">Track Order</p>
                     </li>
                 </a>
-                <!-- <a href="/logout"> -->
-                <a href="/#">
+                <a href="/logout">
                     <li class="list-group-item d-flex align-items-center p-3">
                         <i class="fab fa-facebook-f fa-lg" style="color: #3b5998;"></i>
                         <p class="mb-0">Logout</p>
